# timeplanner

./: .env.example  .gitignore  README.md  principles.md  pyproject.toml
docs/: aw-sync-setup.md  export-example.md  time planner - 实施计划.md  实施进展.md
scripts/: aw_export.py
templates/: daily-note.md
timeplanner/: __init__.py  agent.py  cli.py  config.py  render.py
timeplanner/core/: __init__.py  activitywatch.py  aw_sync.py  backend.py  cache.py  cubox.py  gcal.py  memory.py  notes.py  rollover.py  timeline.py  weather.py
